--- a/gs/content/js/bootstrap/browser/css/bootstrap.css
+++ b/gs/content/js/bootstrap/browser/css/bootstrap.css
@@ -208,11 +208,11 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
   line-height: 1.385;
-  color: #000000;
+  color: #333333;
   background-color: #ffffff;
 }
 a {
-  color: #000000;
+  color: #333333;
   text-decoration: none;
 }
 a:hover {
@@ -714,19 +714,18 @@ h3 {
     line-height: 1; /* gs */
 }
 h1 {
-    font-size: 2.769em; /* gs */
-    margin: 0 0 0.346em 0; /* 0.5u */
+    font-size: 2.077em; /* gs */
+    margin: 0.922em 0 0.461em 0; /* 0.5u */
 }
 h2 {
-    font-size: 2.077em; /* gs */
-    margin: 0.461em 0; /* 0.5u */
-}
-h3 {
-    font-size: 1em; /* gs */
+    font-size: 1.385em; /* gs */
     margin: 0.5em 0; /* 0.5u */
 }
-h4 {
+h3 {
   font-size: 13px; /* gs */
+}
+h4 {
+  font-size: 13px; /* mpj17? */
 }
 h5 {
   font-size: 13px; /* mpj17 ?*/
@@ -1305,7 +1304,7 @@ input[type="color"],
 .uneditable-input {
   display: inline-block;
   height: 1.385em;
-  padding: 4px 6px;
+  padding: 3px 6px; /* gs */
   margin-bottom: 0.6925em;
   font-size: 13px;
   line-height: 1.385;
@@ -1396,13 +1395,13 @@ input[type="checkbox"] {
 }
 select,
 input[type="file"] {
-  height: 11.385px;
+  /*height: 11.385px;*/ /* gs */
   /* In IE7, the height of the select element cannot be changed by height, only font-size */
 
   *margin-top: 4px;
   /* For IE7, add top margin to align select with labels */
 
-  line-height: 11.385px;
+  /*line-height: 11.385px;*/
 }
 select {
   width: 220px;
@@ -2096,14 +2095,7 @@ legend + .control-group {
   cursor: pointer;
   color: #333333;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-  background-color: #f5f5f5;
-  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
-  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
-  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
-  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+  background-color: #ebebeb; /*gs*/
   border-color: #e6e6e6 #e6e6e6 #bfbfbf;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   *background-color: #e6e6e6;
@@ -2130,6 +2122,19 @@ legend + .control-group {
   background-color: #e6e6e6;
   *background-color: #d9d9d9;
 }
+
+.btn:hover,
+.btn:active,
+.btn.active {
+  /* gs: Taken from the .btn */
+  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+}
 .btn:active,
 .btn.active {
   background-color: #cccccc \9;
@@ -2140,11 +2145,10 @@ legend + .control-group {
 .btn:hover {
   color: #333333;
   text-decoration: none;
-  background-position: 0 -15px;
-  -webkit-transition: background-position 0.1s linear;
-  -moz-transition: background-position 0.1s linear;
-  -o-transition: background-position 0.1s linear;
-  transition: background-position 0.1s linear;
+  -webkit-transition: background-image 0.1s linear;
+  -moz-transition: background-image 0.1s linear;
+  -o-transition: background-image 0.1s linear;
+  transition: background-image 0.1s linear;
 }
 .btn:focus {
   outline: thin dotted #333;
